[project]
name = "sse-relay-server"
version = "1.0.10"
description = "An SSE Relay Service: Perfect for Adding Real-Time Features to Your Django Project Without Introducing ASGI or Async Code."
authors = [{ name = "Tobi DEGNON", email = "tobidegnon@proton.me" }]
dependencies = [
    "starlette>=0.31.1",
    "sse-starlette>=1.8.1",
    "python-dotenv>=1.0.0",
    "uvicorn[standard]>=0.23.2",
    "dj_database_url>=2.1.0",
    "psycopg[binary]>=3.1.10",
    "redis>=5.0.0",
    "structlog>=23.2.0",
    "rich>=13.7.0",
]
readme = "README.md"
requires-python = ">= 3.8"
license = { file = "LICENSE" }
keywords = ["python", "django", "postgresql", "redis", "realtime"]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
    "Framework :: Django :: 4",
    "Framework :: Django :: 4.0",
    "Framework :: Django :: 4.1",
    "Framework :: Django :: 4.2",
    "Intended Audience :: Developers",
    "Natural Language :: English",
]

[project.urls]
Homepage = "https://github.com/Tobi-De/sse_relay_server"
Documentation = "https://github.com/Tobi-De/sse_relay_server"
Repository = "https://github.com/Tobi-De/sse_relay_server"

[project.scripts]
sse-relay-server = "sse_relay_server.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "black>=23.9.1",
    "pre-commit>=3.5.0",
]

[tool.hatch.metadata]
allow-direct-references = true
